@@ -1,0 +1,5 @@
+/* { dg-do compile } */
+extern int i;
+#pragma omp threadprivate (i)
+
+int i;
