@@ -1,3 +1,11 @@
+2005-10-21  Diego Novillo  <dnovillo@redhat.com>
+
+	PR 24455
+	* testsuite/libgomp.c++/pr24455-1.C: New test.
+	* testsuite/libgomp.c++/pr24455.C: New test.
+	* testsuite/libgomp.dg/pr24455-1.c: New test.
+	* testsuite/libgomp.dg/pr24455.c: New test.
+
 2005-10-20  Richard Henderson  <rth@redhat.com>
 
 	* testsuite/libgomp.c++/loop-6.C: New.
